--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,8 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td>Some action</td>
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= button_to 'Delete', article_path(article) , method: :delete%></td>
       </tr>
     <% end %>
   </tbody>
